tests/rosetta/out/Fortran/abelian-sandpile-model.error
gfortran: exit status 1
/tmp/abelian-sandpile-model.f90:49:15:

   49 |           pile = handlePile(pile,x,(y - 1))
      |               1
Error: ‘pile’ at (1) is not a variable
/tmp/abelian-sandpile-model.f90:55:15:

   55 |           pile = handlePile(pile,(x - 1),y)
      |               1
Error: ‘pile’ at (1) is not a variable
/tmp/abelian-sandpile-model.f90:61:15:

   61 |           pile = handlePile(pile,x,(y + 1))
      |               1
Error: ‘pile’ at (1) is not a variable
/tmp/abelian-sandpile-model.f90:67:15:

   67 |           pile = handlePile(pile,(x + 1),y)
      |               1
Error: ‘pile’ at (1) is not a variable
/tmp/abelian-sandpile-model.f90:70:11:

   70 |       pile = handlePile(pile,x,y)
      |           1
Error: ‘pile’ at (1) is not a variable
/tmp/abelian-sandpile-model.f90:72:14:

   72 |     res = pile
      |              1
Error: Function ‘pile’ requires an argument list at (1)
/tmp/abelian-sandpile-model.f90:96:8:

   96 |     pile = newPile(16)
      |        1
Error: Symbol ‘pile’ at (1) has no IMPLICIT type
/tmp/abelian-sandpile-model.f90:75:36:

   75 |   recursive subroutine drawPile(pile,d)
      |                                    1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘pile’ at (1)
/tmp/abelian-sandpile-model.f90:40:44:

   40 |   recursive integer function handlePile(pile,x,y) result(res)
      |                                            1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘pile’ at (1)
/tmp/abelian-sandpile-model.f90:33:6:

   33 |       app0(size(b)+1) = row
      |      1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/abelian-sandpile-model.f90:37:4:

   37 |     res = b
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/abelian-sandpile-model.f90:78:18:

   78 |     chars = (/' ','░','▓','█'/)
      |                  1
Error: Different CHARACTER lengths (1/3) in array constructor at (1)
/tmp/abelian-sandpile-model.f90:88:16:

   88 |         line = (line + chars(((v)+1)))
      |                1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/INTEGER(4)
/tmp/abelian-sandpile-model.f90:80:14:

   80 |     do while ((row < d))
      |              1
Error: Exit condition of DO WHILE loop at (1) must be a scalar LOGICAL expression
/tmp/abelian-sandpile-model.f90:45:6:

   45 |       pile(((y)+1),((x)+1)) = (pile(((y)+1),((x)+1)) - 4)
      |      1
Error: The function result on the lhs of the assignment at (1) must have the pointer attribute.
/tmp/abelian-sandpile-model.f90:47:8:

   47 |         pile((((y - 1))+1),((x)+1)) = (pile((((y - 1))+1),((x)+1)) + 1)
      |        1
Error: The function result on the lhs of the assignment at (1) must have the pointer attribute.
/tmp/abelian-sandpile-model.f90:53:8:

   53 |         pile(((y)+1),(((x - 1))+1)) = (pile(((y)+1),(((x - 1))+1)) + 1)
      |        1
Error: The function result on the lhs of the assignment at (1) must have the pointer attribute.
/tmp/abelian-sandpile-model.f90:58:11:

   58 |       if (((y < dim) - 1)) then
      |           1
Error: Operands of binary numeric operator ‘-’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/abelian-sandpile-model.f90:59:8:

   59 |         pile((((y + 1))+1),((x)+1)) = (pile((((y + 1))+1),((x)+1)) + 1)
      |        1
Error: The function result on the lhs of the assignment at (1) must have the pointer attribute.
/tmp/abelian-sandpile-model.f90:64:11:

   64 |       if (((x < dim) - 1)) then
      |           1
Error: Operands of binary numeric operator ‘-’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/abelian-sandpile-model.f90:65:8:

   65 |         pile(((y)+1),(((x + 1))+1)) = (pile(((y)+1),(((x + 1))+1)) + 1)
      |        1
Error: The function result on the lhs of the assignment at (1) must have the pointer attribute.
